Sat Feb 19 01:28:56 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/bigdecimal/lib/bigdecimal/newton.rb: resolve LoadError.
	  [ruby-dev:25685]

	* ext/bigdecimal/sample/linear.rb: ditto.

	* ext/bigdecimal/sample/nlsolve.rb: ditto.

	* ext/bigdecimal/lib/bigdecimal/nlsolve.rb: removed because this file
	  is sample script and same file exists in ext/bigdecimal/sample.

Thu Feb 17 22:15:34 2005  K.Kosako <sndgk@ybb.ne.jp>

	* ext/strscan/strscan.c: calls Oniguruma API directly.

Thu Feb 17 21:53:12 2005  K.Kosako <sndgk@ybb.ne.jp>

	* common.mk, LEGAL: remove reggnu.c.

Thu Feb 17 21:53:12 2005  Kazuo Saito <ksaito@uranus.dti.ne.jp>

	* gc.c, re.c: now ruby calls Oniguruma API directly, bypassing
	  GNU compatible APIs.

Thu Feb 17 20:09:23 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/drb/drb.rb (DRbServer.default_safe_level): fix typo.

	* test/digest/test_digest.rb: separate test case for each algorithms.
	  (Thanks nobu) [ruby-dev:25412]

Thu Feb 17 14:31:52 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_start_1): initialize newly pushed frame.
	  fixed: [ruby-dev:25707]

Thu Feb 17 13:46:00 2005  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/test/unit/collector.rb (collect_file): now deletes paths added
	  to $LOAD_PATH instead of restoring it verbatim.

	* lib/test/unit/autorunner.rb (AutoRunner.run): fixed so that
	  'ruby -rtest/unit -rtest1 -rtest2 -e0' will use the objectspace
	  collector again. Also tried to simplify the calling convention.

	* test/runner.rb: adjusted for new AutoRunner semantics.

	* lib/test/unit.rb: ditto.

Thu Feb 17 00:31:21 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/drb/test_drb.rb, ut_safe1.rb: port from 1.8

Wed Feb 16 23:54:14 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_start_1): outer block variables wasn't linked to
	  threads.  fixed: [ruby-dev:25700]

Wed Feb 16 15:11:43 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>
